--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
 
 @font-face {
   font-family: Lato;
-  font-display: swap;
   src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../fonts/Lato-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
@@ -235,7 +234,7 @@ textarea.input {
 }
 
 .no-webp .select__value:after{
-  background-image: url(img/arrow-1.png); }
+  background-image: url(../img/arrow-1.png); }
 
 .select__value:after {
   content: "";
@@ -262,7 +261,7 @@ textarea.input {
 }
 
 .no-webp ._select-open .select__value:after{
-  background-image: url(img/arrow-2.png); }
+  background-image: url(../img/arrow-2.png); }
 
 ._select-open .select__value:after {
   -webkit-transform: rotate(-180deg);
@@ -1028,7 +1027,7 @@ body::after {
 
 .menu__list > li {
   position: relative;
-  margin: 0px 0px 5px 56px;
+  margin: 0px 0px 0px 56px;
   line-height: 16px;
 }
 
@@ -2034,7 +2033,7 @@ body._touch .menu__link {
     background-image: url(../img/main-bg_mb.png); }
 
   .page {
-    height: 70vh;
+    height: auto;
     background-size: cover;
   }
 
@@ -2049,6 +2048,18 @@ body._touch .menu__link {
     background: #fffdfd7c;
     z-index: -1;
   }
+
+@supports (padding-top: clamp( 3.125rem , 2.4447278912rem  +  3.4013605442vw , 5rem )) {
+    .main-page {
+      padding-top: clamp( 3.125rem , 2.4447278912rem  +  3.4013605442vw , 5rem );
+    }
+}
+
+@supports not (padding-top: clamp( 3.125rem , 2.4447278912rem  +  3.4013605442vw , 5rem )) {
+    .main-page {
+      padding-top: calc(3.125rem + 1.875 * (100vw - 20rem) / 55.125);
+    }
+}
 
   .main-page__title {
     width: 100%;
@@ -2419,9 +2430,9 @@ body._touch .menu__link {
   }
 }
 
-.webp .select__value:after{ background-image: url(img/arrow-1.webp); }
+.webp .select__value:after{ background-image: url(../img/arrow-1.webp); }
 
-.webp ._select-open .select__value:after{ background-image: url(img/arrow-2.webp); }
+.webp ._select-open .select__value:after{ background-image: url(../img/arrow-2.webp); }
 
 .webp .page{ background-image: url(../img/main-bg.webp); }
 
