--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,6 +1,5 @@
 // Заголовки, общие БЄМ блоки и проче...
 .btn {
-    
     @include adaptiveValue("font-size", 13, 10);
     text-transform: uppercase;
     color: #fff;
@@ -14,9 +13,9 @@
     padding: 15px 10px;
     transition: all 0.3s;
     &_w {
-        color: #2A2B30;
+        color: #2a2b30;
         background-color: #fff;
-        border-color: #2A2B30;
+        border-color: #2a2b30;
         &:hover {
             color: #fff;
             border-color: #fff;
@@ -24,61 +23,55 @@
     }
     &:hover {
         background-color: $blue_active;
-        
     }
 }
 
-.__title {
+.title {
     display: flex;
     justify-content: center;
-    font-family: 'Lato', 'san-serif';
+    font-family: "Lato", "san-serif";
     color: #fff;
     text-transform: uppercase;
     width: 100%;
     @include adaptiveValue("font-size", 36, 20);
-    & span {
-        color: $blue;
+    &__text {
+        &_blue {
+            color: $blue;
+        }
     }
 }
 
-.__subtitle {
+.subtitle {
     display: flex;
     justify-content: center;
     width: 100%;
     text-align: center;
     @include adaptiveValue("font-size", 18, 14);
-    color: #BBBBBB;
+    color: #bbbbbb;
     line-height: 20px;
+    &__text {
+        
+    }
 }
 
-
-
-
-
-
-  .button-form {
+.button-form {
     margin: 20px auto 20px auto;
     width: 31%;
-    @media (max-width:$mobile){
-         width: 54%; 
-         
+    @media (max-width: $mobile) {
+        width: 54%;
     }
 }
 
 .select__content {
     font-size: 18px;
-    @media (max-width:$mobile){
-          font-size: 14px;
+    @media (max-width: $mobile) {
+        font-size: 14px;
     }
 }
 
-
 .simplebar-scrollbar::before {
-    background: #3E9CDC!important;
+    background: #3e9cdc !important;
 }
 .simplebar-scrollbar.simplebar-visible::before {
-    opacity: 0.9!important;
-    
-  }
-
-
+    opacity: 0.9 !important;
+}
