--- a/scss/order.scss
+++ b/scss/order.scss
@@ -137,16 +137,6 @@
             background-color: $blue_active;
         }
 
-        & svg {
-            width: 60px;
-            padding-right: 2px;
-            @media (max-width: $tablet) {
-                width: 50px;
-            }
-            @media (max-width: $mobileSmall) {
-                width: 35px;
-            }
-        }
         @media (max-width: $tablet) {
             width: 70px;
             height: 70px;
@@ -159,6 +149,16 @@
             width: 50px;
             height: 50px;
             margin-right: 20px;
+        }
+    }
+    &__svg {
+        width: 60px;
+        padding-right: 2px;
+        @media (max-width: $tablet) {
+            width: 50px;
+        }
+        @media (max-width: $mobileSmall) {
+            width: 35px;
         }
     }
 
@@ -216,15 +216,11 @@
             margin: 10px 0px;
         }
     }
-    &__item-title {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-    }
-    &__item-range {
+
+    &-range {
         display: flex;
         flex-direction: column;
-        
+
         width: 65%;
         margin: 20px 0px;
         height: 48px;
@@ -236,27 +232,54 @@
             width: 71%;
             padding-right: 0px;
         }
-    }
-    &__item-title-text {
-        color: #fff;
-        font-size: 18px;
-        @media (max-width: $tablet) {
-            font-size: 14px;
+        &__title {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
         }
-        @media (max-width: $mobile) {
-            font-size: 12px;
+        &__text {
+            color: #fff;
+            font-size: 18px;
+            @media (max-width: $tablet) {
+                font-size: 14px;
+            }
+            @media (max-width: $mobile) {
+                font-size: 12px;
+            }
+        }
+        &__check {
+            display: flex;
+            font-size: 18px;
+            color: #fff;
+            align-items: flex-start;
+            @media (max-width: $tablet) {
+                font-size: 14px;
+            }
+        }
+        &__input {
+            background: transparent;
+            color: #fff;
+            width: 33px;
+            padding-bottom: 5px;
+            pointer-events: none;
+            @media (max-width: $tablet) {
+                width: 25px;
+            }
+        }
+        &__procent {
+            font-size: 20px;
+            @media (max-width: $tablet) {
+                font-size: 17px;
+            }
+        }
+        &__slider {
+            margin-top: 10px;
         }
     }
 
     &__item-select {
         display: inline-block;
         width: 100%;
-    }
-
-    &__select {
-        @media (max-width: $mobileSmall) {
-            font-size: 14px;
-        }
     }
 
     &__input {
@@ -301,36 +324,13 @@
             width: 80%;
         }
     }
-    &__item-check {
-        display: flex;
-        font-size: 18px;
-        color: #fff;
-        align-items: flex-start;
-        @media (max-width: $tablet) {
-            font-size: 14px;
-        }
-        & span {
-            font-size: 20px;
-            @media (max-width:$tablet){
-                  font-size: 17px;
-            }
-        }
-    }
-    &__range {
-        background: transparent;
-        color:#fff;
-        width: 33px;
-        padding-bottom: 5px;
-        pointer-events: none;
-        @media (max-width:$tablet){
-              width: 25px;
-        }
-    }
-    &__slider-range {
-        margin-top: 10px;
-    }
 }
 
+.select-form {
+    @media (max-width: $mobileSmall) {
+        font-size: 14px;
+    }
+}
 
 .file {
     width: 100%;
