--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,7 +65,7 @@ body {
 	}
 }
 // Оболочка ============================================================================================================================================================================================================================================================================================================================================================================================================================================
-.wrapper {
+.body-main {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
